# bevy-trait-resource

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
proc-macro/: Cargo.toml  README.md
proc-macro/src/: lib.rs
src/: lib.rs  tests.rs
